methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:9: error: ')' expected but 'else' found.
  else{
  ^