methods.slug.SlugHunting.scala.code
def hunt() {
  while(estSurBiscuit==false){
  if (isFacingTrail(){
    avance()
    baisseBrosse()
    leveBrosse()
  }
  else{
    droite()
  }
  }
  prendBiscuit()
    // Write your code here
}
def isFacingTrail():Boolean = {
  if (estFaceMur){
    return false
  }
  avance()
  if (getCouleurSol()==Color.green){
    recule()
    return true
  }
  else{
    recule()
    return false
  }
}

// Copy your isFacingTrail() here